fixed activity codes in search, added config for min/max zoom, added view map in full-screen btn

--- a/www/index-embed.html
+++ b/www/index-embed.html
@@ -54,6 +54,12 @@
               >View the map</a
             >
           </div>
+          <div class="w3-center map-button-fullscreen">
+            <a href="map.html"
+             target="_blank"
+             class="cta-btn primary w3-align-center"
+             >View Map in Fullscreen</a>
+          </div>
         </div>
       </div>
       <div class="w3-threequarter map-container">
