attempt to fix iframe

--- a/www/index.html
+++ b/www/index.html
@@ -23,12 +23,12 @@
       html,
       body {
         height: 100%;
-        width: 100vw;
+        width: 100%;
       }
     </style>
   </head>
   <body>
     <div id="map-app"></div>
-    <script src="map-app/map-app.js"></script>
+    <script src="http://127.0.0.1/www/www/map-app/map-app.js"></script>
   </body>
 </html>
